--- a/Homework/app/src/main/AndroidManifest.xml
+++ b/Homework/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Ch3Ex3Activity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Ch3Ex1Activity" android:label="@string/ex1">
-        </activity>
-        <activity android:name=".Ch3Ex2Activity" android:label="@string/ex2">
-        </activity>
+        <activity
+            android:name=".Ch3Ex1Activity"
+            android:label="@string/ex1"></activity>
+        <activity
+            android:name=".Ch3Ex2Activity"
+            android:label="@string/ex2"></activity>
     </application>
 
 </manifest>
